Fix menu on smaller screens

--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -1,3 +1,5 @@
+@use "bulma/sass/utilities/mixins";
+
 .navigation {
   position: fixed;
   left: 0;
@@ -11,12 +13,15 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 7px;
     padding: 13px;
     width: fit-content;
     border-radius: 50px;
     backdrop-filter: blur(20px) saturate(1.7);
     background: hsla(293, 43%, 12%, 0.71);
+
+    @include mixins.from(380px) {
+      gap: 7px;
+    }
   }
 
   .item {
